# translator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu-ci.yml
src/: LanguageDetector.cpp  LanguageDetector.h  MarianTranslator.cpp  MarianTranslator.h  Tokenizer.cpp  Tokenizer.h  TranslationContext.cpp  TranslationContext.h  Translator.h  main.cpp  text_utils.h
